BACKLOG-12278 : fixed alignement

--- a/src/components/TreeView/TreeView.scss
+++ b/src/components/TreeView/TreeView.scss
@@ -57,6 +57,8 @@
 }
 
 .treeView_itemToggle {
+    width: 16px;
+
     cursor: pointer;
 }
 
